[guava] remove a lot of guava collections