@@ -1,6 +1,5 @@
 package stubidp.utils.common.featuretoggles;
 
-import com.google.common.collect.ImmutableList;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -16,7 +15,7 @@ public class FeatureConfiguration {
 
     @Valid
     // It is valid for us to have no features i.e. a null/empty list
-    public List<FeatureEntry> features = ImmutableList.of();
+    public List<FeatureEntry> features = List.of();
 
     @Valid
     @NotNull
