@@ -1,7 +1,6 @@
 package stubidp.saml.hub.hub.validators.response.matchingservice;
 
 import com.google.common.base.Strings;
-import com.google.common.collect.ImmutableList;
 import org.opensaml.saml.saml2.core.Response;
 import org.opensaml.saml.saml2.core.StatusCode;
 import org.opensaml.xmlsec.signature.Signature;
@@ -10,6 +9,8 @@ import stubidp.saml.hub.core.errors.SamlTransformationErrorFactory;
 import stubidp.saml.hub.hub.exception.SamlValidationException;
 import stubidp.saml.hub.hub.validators.response.common.IssuerValidator;
 import stubidp.saml.hub.hub.validators.response.common.RequestIdValidator;
+
+import java.util.List;
 
 import static stubidp.saml.security.validators.signature.SamlSignatureUtil.isSignaturePresent;
 
@@ -52,7 +53,7 @@ public class EncryptedResponseFromMatchingServiceValidator {
     }
 
     private void validateResponderError(String subStatusCodeValue) {
-        if (ImmutableList.of(
+        if (List.of(
             SamlStatusCode.NO_MATCH,
             SamlStatusCode.MULTI_MATCH,
             SamlStatusCode.CREATE_FAILURE).contains(subStatusCodeValue)) {
@@ -64,7 +65,7 @@ public class EncryptedResponseFromMatchingServiceValidator {
 
     private void validateSuccessResponse(String statusCodeValue, String subStatusCodeValue) {
         if (!StatusCode.SUCCESS.equals(statusCodeValue)) return;
-        if (ImmutableList.of(
+        if (List.of(
                 SamlStatusCode.MATCH,
                 SamlStatusCode.NO_MATCH,
                 SamlStatusCode.CREATED).contains(subStatusCodeValue)) {
